# localshare

./: Cargo.toml  LICENSE  README.md  authorized_keys  lds.keyring
src/: codec.rs  command.rs  commands.rs  config.rs  error.rs  file_chunk.rs  keyring.rs  main.rs  message.rs  noise.rs
