[package]
name = "localshare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["full"] }
tokio-stream = { version = "0.1.14" }
futures = { version = "0.3.28" }
bytes = { version = "1.4.0" }
snow = { version = "0.9.3" }
num_enum = "0.7.0"
clap = { version = "4.4.1" }
base64ct = { version = "1.6.0", features = ["alloc"] }
